--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div style="display: inline-block; text-align: left;">
                 This is a small website to host a bunch of <br /> 
                 post rock, drone and other genres, <br />
-                which hasn't found its way onto DSPs <br/>
+                which hasn't found its way onto streaming
             </div>
         </div>
         <div class="responsive">
@@ -21,7 +21,7 @@
                 <a target="_blank" href="images/nsb.webp">
                 <img src="images/nsb.webp" alt="Natural Snow Buildings" width="500" height="500">
                 </a>
-                <div class="desc"><a href="subpages/nsb.html">Natural Snow Buildings</a></div>
+                <div class="desc"><a href="nsb.html">Natural Snow Buildings</a></div>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
                 <a target="_blank" href="images/swans.webp">
                 <img src="images/swans.webp" alt="Swans" width="500" height="500">
                 </a>
-                <div class="desc"><a href="subpages/swans.html">Swans</a></div>
+                <div class="desc"><a href="swans.html">Swans</a></div>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
                 <a target="_blank" href="images/gybe.webp">
                 <img src="images/gybe.webp" alt="Godspeed You! Black Emperor" width="500" height="500">
                 </a>
-                <div class="desc"><a href="subpages/gybe.html">Godspeed You! Black Emperor</a></div>
+                <div class="desc"><a href="gybe.html">Godspeed You! Black Emperor</a></div>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
                 <a target="_blank" href="images/boris.webp">
                 <img src="images/boris.webp" alt="Boris" width="500" height="500">
                 </a>
-                <div class="desc"><a href="subpages/boris.html">Boris</a></div>
+                <div class="desc"><a href="boris.html">Boris</a></div>
             </div>
         </div>
 
