--- a/nsb.html
+++ b/nsb.html
@@ -18,10 +18,19 @@
         <div class="responsive">
             <div class="gallery">
                 <a target="_blank" href="images/doftmas.webp">
-                <img src="images/doftmas.webp" alt="Natural Snow Buildings" width="500" height="500">
+                <img src="images/doftmas.webp" alt="Dance of the Moon and Sun" width="500" height="500">
                 </a>
                 The Dance of the Moon and the Sun
                 <div class="desc"><a href="https://drive.proton.me/urls/DYTVR3D47W#4mNlVFrppNNB">Download</a></div>
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="images/sk.webp">
+                <img src="images/sk.webp" alt="Shadow Kingdom" width="500" height="500">
+                </a>
+                Shadow Kingdom
+                <div class="desc"><a href="https://drive.proton.me/urls/Q6284D06E0#j3AP1561ElV5">Download</a></div>
             </div>
         </div>
     </body>
