--- a/gybe.html
+++ b/gybe.html
@@ -14,6 +14,33 @@
             <div style="display: inline-block; text-align: left;">
                     A Canadian Post Rock Band <br /> 
             </div>
+        </div> 
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="images/ps.webp">
+                <img src="images/ps.webp" alt="John Peel Session" width="500" height="500">
+                </a>
+                John Peel Session
+                <div class="desc"><a href="https://drive.proton.me/urls/64N39JBT74#WIEMEXEn8GZy">Download</a></div>
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="images/amazezine.webp">
+                <img src="images/amazezine.webp" alt="amazezine 7 inch" width="500" height="500">
+                </a>
+                aMAZEzine!
+                <div class="desc"><a href="https://drive.proton.me/urls/W18NR7603R#xAQnY90Ig2zS">Download</a></div>
+            </div>
+        </div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="images/fsasi.webp">
+                <img src="images/fsasi.webp" alt="F sharp A sharp infinity vinyl" width="500" height="500">
+                </a>
+                F♯ A♯ ∞ (Vinyl)
+                <div class="desc"><a href="https://drive.proton.me/urls/76BR4NARDW#HfO3TSCu4Ebx">Download</a></div>
+            </div>
         </div>
     </body>
 </html>
