Added Deliquescence by swans

--- a/swans.html
+++ b/swans.html
@@ -16,5 +16,14 @@
                     Associated with many genres
             </div>
         </div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="images/deliquescence.webp">
+                <img src="images/deliquescence.webp" alt="Deliquescence" width="500" height="500">
+                </a>
+                Deliquescence
+                <div class="desc"><a href="https://drive.proton.me/urls/TPHZE102SC#3SClzuljTYin">Download</a></div>
+            </div>
+        </div>
     </body>
 </html>
