Added a list of links to sources and mirrors

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <div style="display: inline-block; text-align: left;">
                 This is a small website to host a bunch of <br /> 
                 post rock, drone and other genres, <br />
-                which hasn't found its way onto streaming
+                which hasn't found its way onto streaming <br/>
+                <a href="links.html", style="text-align: center; display: block;">mirrors and sources</a>
             </div>
         </div>
+        
         <div class="responsive">
             <div class="gallery">
                 <a target="_blank" href="images/nsb.webp">
