--- a/gybe.html
+++ b/gybe.html
@@ -42,5 +42,14 @@
                 <div class="desc"><a href="https://drive.proton.me/urls/76BR4NARDW#HfO3TSCu4Ebx">Download</a></div>
             </div>
         </div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="images/20030514.webp">
+                <img src="images/20030514.webp" alt="2003-05-14" width="500" height="500">
+                </a>
+                2003-05-14
+                <div class="desc"><a href="https://drive.proton.me/urls/HE2GE92GF4#AQ3gPBKjIB6F">Download</a></div>
+            </div>
+        </div>
     </body>
 </html>
