Changed the home link to the full URL

--- a/boris.html
+++ b/boris.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Band Name</h1>
-        <p> <a href="index.html">home</a></p>
+        <p> <a href="https://jakewdr.github.io/jakesarchive/">home</a></p>
         <div class="text", style="text-align: center;">
             <div style="display: inline-block; text-align: left;">
                     A Japanese Metal, Drone and Rock band <br /> 
