--- a/nsb.html
+++ b/nsb.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Natural Snow Buildings</h1>
-        <p> <a href="index.html">home</a></p>
+        <p> <a href="https://jakewdr.github.io/jakesarchive/">home</a></p>
         <div class="text", style="text-align: center;">
             <div style="display: inline-block; text-align: left;">
                     A French Neofolk and Drone band <br /> 
