Added page meta for SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="A small website to host a bunch of post rock, drone and other genres, known as jakesarchive, jakes archive, jake's archive, jake's music archive">
         <title>jake's archive</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
